Fix polygon search logic and improve zip code validation
Reversed latitude and longitude order in polygon search logic to align with WKT format and updated query method in the repository for better clarity. Enhanced zip code validation in DTO and entity with a regex pattern to support standard and extended formats.